<resources>
    <string name="app_name">Matching</string>
    <!-- Tab Bar Items -->
    <string name="tab_bar_item_1_title">さがす</string>
    <string name="tab_bar_item_2_title">いいね</string>
    <string name="tab_bar_item_3_title">トーク</string>
    <string name="tab_bar_item_4_title">好みカード</string>
    <string name="tab_bar_item_5_title">マイページ</string>

    <!-- Tab1 Items -->
    <string name="tab_bar_item_1_sub_1_title">さがす</string>
    <string name="tab_bar_item_1_sub_2_title">For You</string>

    <!-- UserInfo Items -->
    <string name="title_user_information">基本情報</string>
    <string name="title_user_nick_name">ニックネーム</string>
    <string name="title_user_age">年齢</string>
    <string name="title_user_address">居住地</string>

    <!-- MyPage Items -->
    <string name="my_page_my_information">情報更新</string>
    <string name="my_page_theme">テーマ</string>

    <!-- Theme Items -->
    <string name="theme_title">テーマを選択</string>
    <string name="theme_light">Light Mode</string>
    <string name="theme_dark">Dark Mode</string>
    <string name="theme_default">Default</string>
    <string name="theme_confirm">Confirm</string>
    <string name="theme_cancel">Cancel</string>
</resources>